Adjusted ratio pie background. Fixed KR bar alignment.

--- a/skrum_frontend/src/project/OKR/OKRList/KRBar.css
+++ b/skrum_frontend/src/project/OKR/OKRList/KRBar.css
@@ -61,6 +61,7 @@
 .action {
   display: flex;
   margin: auto 0;
+  padding-right: 42px;
 }
 .circle {
   width: 40px;
